--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
+      "php-http/discovery": true,
       "phpstan/extension-installer": true,
       "symfony/runtime": false
     }
